After successfully building the project

--- a/TD_Acceptance.vbproj
+++ b/TD_Acceptance.vbproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <MyType>WindowsFormsWithCustomSubMain</MyType>
@@ -19,7 +19,7 @@
     <RootNamespace>Project1</RootNamespace>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
@@ -50,29 +50,37 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GrapeCity.ActiveReports.Chart.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\ActiveReportsNET12\Bin\v12.1.13445.1\GrapeCity.ActiveReports.Chart.v12.dll</HintPath>
+    <Reference Include="adodb, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="GrapeCity.ActiveReports.Diagnostics.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
-    <Reference Include="GrapeCity.ActiveReports.Document.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
+    <Reference Include="GrapeCity.ActiveReports, Version=13.1.16872.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\ActiveReportsNET12\Bin\v12.1.13445.1\GrapeCity.ActiveReports.Document.v12.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Common Files\GrapeCity\ActiveReports 13\GrapeCity.ActiveReports.dll</HintPath>
     </Reference>
-    <Reference Include="GrapeCity.ActiveReports.Extensibility.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
-    <Reference Include="GrapeCity.ActiveReports.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
+    <Reference Include="GrapeCity.ActiveReports.Document, Version=13.1.16872.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\ActiveReportsNET12\Bin\v12.1.13445.1\GrapeCity.ActiveReports.v12.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Common Files\GrapeCity\ActiveReports 13\GrapeCity.ActiveReports.Document.dll</HintPath>
     </Reference>
-    <Reference Include="GrapeCity.ActiveReports.Viewer.Win.v12, Version=12.1.13445.1, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
+    <Reference Include="GrapeCity.ActiveReports.Viewer.Win, Version=13.1.16872.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\ActiveReportsNET12\Bin\v12.1.13445.1\GrapeCity.ActiveReports.Viewer.Win.v12.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Common Files\GrapeCity\ActiveReports 13\GrapeCity.ActiveReports.Viewer.Win.dll</HintPath>
+    </Reference>
+    <Reference Include="Interop.RDO, Version=2.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>bin\Interop.RDO.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.stdformat, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.Compatibility">
       <Name>Microsoft.VisualBasic.Compatibility</Name>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.Compatibility.Data">
       <Name>Microsoft.VisualBasic.Compatibility.Data</Name>
+    </Reference>
+    <Reference Include="msdatasrc, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
@@ -89,34 +97,6 @@
     <Reference Include="System.XML">
       <Name>System.XML</Name>
     </Reference>
-    <COMReference Include="ADODB">
-      <Guid>{EF53050B-882E-4776-B643-EDA472E8E3F2}</Guid>
-      <Lcid>0</Lcid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>7</VersionMinor>
-      <WrapperTool>primary</WrapperTool>
-    </COMReference>
-    <COMReference Include="Microsoft.StdFormat">
-      <Guid>{6B263850-900B-11D0-9484-00A0C91110ED}</Guid>
-      <Lcid>0</Lcid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <WrapperTool>primary</WrapperTool>
-    </COMReference>
-    <COMReference Include="MSDATASRC">
-      <Guid>{7C0FFAB0-CD84-11D0-949A-00A0C91110ED}</Guid>
-      <Lcid>0</Lcid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <WrapperTool>primary</WrapperTool>
-    </COMReference>
-    <COMReference Include="RDO">
-      <Guid>{EE008642-64A8-11CE-920F-08002B369A33}</Guid>
-      <Lcid>0</Lcid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <WrapperTool>tlbimp</WrapperTool>
-    </COMReference>
     <COMReference Include="RDS">
       <Guid>{BD96C556-65A3-11D0-983A-00C04FC29E30}</Guid>
       <Lcid>0</Lcid>
