--- a/app.config
+++ b/app.config
@@ -27,9 +27,6 @@
     </system.diagnostics>
     <userSettings>
         <Project1.My.MySettings>
-            <setting name="MDB_File_PATH" serializeAs="String">
-                <value>C:\MyDevelopment\VB.net\TD_Helmock_VB.NET_MDB\td_v10.mdb</value>
-            </setting>
             <setting name="BagLabelLayoutFile" serializeAs="String">
                 <value>\\140.81.58.14\public_share\system\CartonBoxLabel_mr400e_MLv4.mllay</value>
             </setting>
@@ -78,9 +75,6 @@
             <setting name="MIS_CustomerId" serializeAs="String">
                 <value>KOM</value>
             </setting>
-            <setting name="RPT_MDB_File_Path" serializeAs="String">
-                <value>C:\MyDevelopment\VB.net\TD_Helmock_VB.NET_MDB\mis_rpt_tbl.mdb</value>
-            </setting>
             <setting name="DB_DbName" serializeAs="String">
                 <value>TD</value>
             </setting>
@@ -97,13 +91,19 @@
                 <value>CP91070N</value>
             </setting>
             <setting name="Specimen" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="OtherDefect" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="MDB_File_PATH" serializeAs="String">
+                <value>C:\Prasad\Mywork\Arya Global Projects\VB.NET\TD_Helmock_VB.NET_MDB\td_v10.mdb</value>
+            </setting>
+            <setting name="RPT_MDB_File_Path" serializeAs="String">
+                <value>C:\Prasad\Mywork\Arya Global Projects\VB.NET\TD_Helmock_VB.NET_MDB\mis_rpt_tbl_v10.mdb</value>
             </setting>
             <setting name="TdMaterialReportFilePath" serializeAs="String">
-                <value>C:\MyDevelopment\VB.net\TD_Helmock_VB.NET_MDB\TD_Acceptance_V10_mdb.NET\ReportTD_Material.rdlx</value>
+                <value>C:\Prasad\Mywork\Arya Global Projects\VB.NET\TD_Helmock_VB.NET_MDB\TD_Acceptance_V10_mdb.NET\ReportTD_Material.rdlx</value>
             </setting>
         </Project1.My.MySettings>
     </userSettings>
