--- a/app.config
+++ b/app.config
@@ -76,13 +76,13 @@
                 <value>KOM</value>
             </setting>
             <setting name="DB_DbName" serializeAs="String">
-                <value>TD</value>
+                <value>XE</value>
             </setting>
             <setting name="DB_Username" serializeAs="String">
-                <value>td</value>
+                <value>TD_V10</value>
             </setting>
             <setting name="DB_Password" serializeAs="String">
-                <value>td</value>
+                <value>oracle123</value>
             </setting>
             <setting name="TableId" serializeAs="String">
                 <value>2</value>
